redirect to home after save and some cleanup
after adding new review, routing to the home
some code refactoring and cleanup

--- a/client/app/review/review.list.component.html
+++ b/client/app/review/review.list.component.html
@@ -10,8 +10,8 @@
         <label>Sort By:</label>
 
         <select class='form-control ' data-val='true ' [(ngModel)]='sortByField' (change)="onSortChange() " name='SortBy '>
-												<option value='New'>Oldest Review</option>
-												<option value='Old'>Latest Review</option>
+												<option value='Oldest'>Oldest Review</option>
+												<option value='Latest'>Latest Review</option>
       </select>
     </div>
 
